--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -10,3 +10,10 @@ html, body{
     padding: 20PX;
     font-size: 25px;
 }
+
+.carta{
+    position: relative;
+    width: 150px;
+    left: 100px;
+    margin-left: -75px;
+}
